Switch to numbered sections

--- a/texmf/beamer-settings.sty
+++ b/texmf/beamer-settings.sty
@@ -65,9 +65,9 @@
 }
 
 % TOC settings
-% \setbeamertemplate{section in toc}[sections numbered]
+\setbeamertemplate{section in toc}[sections numbered]
 % \setbeamertemplate{subsection in toc}[subsections numbered]
-\setbeamertemplate{section in toc}[ball unnumbered]
+% \setbeamertemplate{section in toc}[ball unnumbered]
 \setbeamertemplate{subsection in toc}[ball unnumbered]
 
 
