--- a/texmf/customdefs.sty
+++ b/texmf/customdefs.sty
@@ -610,7 +610,14 @@
 % TOC Slide
 \newcommand{\tocslide}[1][] {
 	\slide{Outline}{
-			\tableofcontents[#1]
+		\tableofcontents[#1]
+	}
+}
+\NewDocumentCommand{\mcoltocslide}{m m O{}} {
+	\slide[vv]{Outline}{
+		\tableofcontents[sections=#1,#3]
+	}{
+		\tableofcontents[sections=#2,#3]
 	}
 }
 
